@@ -32,6 +32,7 @@ xine-lib (1.1.2)
     devel packages aren't installed (where appropriate). (Ubuntu 47357)
   * Fix install problems in case configure was generated by autoconf >= 2.59c.
   * Fixed some win32 codec freezes when configured w32-path doesn't exist
+  * Add support for RealPlayer 10 codecs (from SUSE)
   
 xine-lib (1.1.1)
   * Improve sound quality when using alsa 1.0.9 or above.
